Fixed doc links and spacing

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -43,6 +43,16 @@
   border-radius: 0 1em 1em 0;
 }
 
+.description {
+  margin-bottom: 2rem !important;
+}
+
+.docs {
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
 .buttons-tools-github {
   display: flex;
   align-items: center;
@@ -104,6 +114,9 @@
   left: 0;
 }
 
+.description {
+  padding-bottom: 10px !important;
+}
 .hero__title {
   z-index: 1 !important;
 }
